--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <title>GenieACS</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <script src="app.js"></script>
